# serendipity

./: CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  sample_context.md
docs/: architecture.md  extending-settings.md  icons.md  settings.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: Header.tsx  LoadingOverlay.tsx  StarRating.tsx  icons.tsx  index.ts
frontend/src/hooks/: index.ts  useProfile.ts  useSSE.ts  useSettings.ts
frontend/src/styles/: index.css
serendipity/: __init__.py  agent.py  base_template.html  cli.py  display.py  html_renderer.py  icons.py  learnings_parser.py  models.py  profile_builder.py  prompt.txt  resources.py  rules.py  search.py  server.py  settings.py  storage.py
serendipity/config/: types.py
serendipity/config/defaults/: settings.schema.json  settings.yaml  types.schema.json  types.yaml
serendipity/context_sources/: __init__.py  base.py  builtins.py  command.py  loader.py  mcp.py
serendipity/output_destinations/: __init__.py  base.py  builtins.py  command.py  webhook.py
serendipity/prompts/: __init__.py  builder.py  discovery.txt  frontend_design.txt  system.txt
serendipity/templates/: __init__.py  base.html  style.css
static/: index.html
static/assets/: index-BqS7QWWS.js  index-BsS7qPuB.css  index-C5yC21g3.js  index-CcHzijEh.js  index-CkPGsMX-.css  index-DswxtKJ_.js  index-k-mqa-SG.css
tests/: conftest.py  test_agent.py  test_cli.py  test_context_sources.py  test_display.py  test_e2e.py  test_learnings_parser.py  test_models.py  test_profile_builder.py  test_prompt_builder.py  test_resources.py  test_rules.py  test_search.py  test_server.py  test_settings.py  test_storage.py  test_types_config.py
(+13 files in other folders)
